# sqlite-winq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_xcode.sh
include/sqlite-winq/abstract/: abstract.h  clause_join.hpp  column.hpp  column_def.hpp  column_index.hpp  column_result.hpp  column_type.hpp  conflict.hpp  constraint_table.hpp  declare.hpp  describable.hpp  expr.hpp  foreign_key.hpp  literal_value.hpp  module_argument.hpp  order.hpp  order_term.hpp  pragma.hpp  property.hpp  result.hpp  statement.hpp  statement_alter_table.hpp  statement_attach.hpp  statement_create_index.hpp  statement_create_table.hpp  statement_create_virtual_table.hpp  statement_delete.hpp  statement_detach.hpp  statement_drop_index.hpp  statement_drop_table.hpp  statement_explain.hpp  statement_insert.hpp  statement_pragma.hpp  statement_reindex.hpp  statement_release.hpp  statement_rollback.hpp  statement_savepoint.hpp  statement_select.hpp  statement_transaction.hpp  statement_update.hpp  (+3 more)
include/sqlite-winq/accessor/: base_accessor.h  cpp_accessor.h  runtime_base_accessor.h  runtime_cpp_accessor.h
include/sqlite-winq/binding/: binding.h  column_binding.h  constraint_binding.h  declare.h  index_binding.h
include/sqlite-winq/macro/: coding_macro.h  constraint_macro.h  index_macro.h  macro.h  macro_helper.h  property_macro.h
samples/: CMakeLists.txt  main.cpp  message.cpp  message.hpp  message_schema.cpp  message_schema.hpp
src/abstract/: clause_join.cpp  column.cpp  column_def.cpp  column_index.cpp  column_result.cpp  column_type.cpp  conflict.cpp  constraint_table.cpp  describable.cpp  expr.cpp  foreign_key.cpp  literal_value.cpp  module_argument.cpp  order.cpp  order_term.cpp  pragma.cpp  property.cpp  result.cpp  statement.cpp  statement_alter_table.cpp  statement_attach.cpp  statement_create_index.cpp  statement_create_table.cpp  statement_create_virtual_table.cpp  statement_delete.cpp  statement_detach.cpp  statement_drop_index.cpp  statement_drop_table.cpp  statement_explain.cpp  statement_insert.cpp  statement_pragma.cpp  statement_reindex.cpp  statement_release.cpp  statement_rollback.cpp  statement_savepoint.cpp  statement_select.cpp  statement_transaction.cpp  statement_update.cpp  statement_vacuum.cpp  subquery.cpp  (+1 more)
src/accessor/: runtime_base_accessor.cpp
src/binding/: binding.cpp  column_binding.cpp  constraint_binding.cpp  index_binding.cpp
